benswork/UARProject/force-app/main/default/objects/App_User_Role__c/App_User_Role__c.object-meta.xml
<CustomObject>
    <label>App User Role</label>
    <nameField>
        <displayFormat>AUR-{0000}</displayFormat>
        <label>App User Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App User Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>