benswork/UARProject/force-app/main/default/objects/App_User_Role__c/fields/Access_Request__c.field-meta.xml
<CustomField>
    <fullName>Access_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Request</label>
    <referenceTo>Access_Request__c</referenceTo>
    <relationshipLabel>App User Roles</relationshipLabel>
    <relationshipName>App_User_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>