benswork/UARProject/force-app/main/default/objects/App_User_Role__c/fields/Access_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Access_Request_Approved__c</fullName>
    <description>Was the Access Request Approved?</description>
    <label>Access Request Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>