benswork/UARProject/force-app/main/default/objects/App_User_Role__c/fields/App_Role__c.field-meta.xml
<CustomField>
    <fullName>App_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Role</label>
    <referenceTo>App_Role__c</referenceTo>
    <relationshipLabel>App User Roles</relationshipLabel>
    <relationshipName>App_User_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>