benswork/UARProject/force-app/main/default/objects/App_User_Role__c/fields/App_Role_Description__c.field-meta.xml
<CustomField>
    <fullName>App_Role_Description__c</fullName>
    <formula>App_Role__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Role Description</label>
    <type>Text</type>
</CustomField>