benswork/UARProject/force-app/main/default/objects/App_User_Role__c/fields/Role_Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>Role_Description_Formula__c</fullName>
    <formula>App_Role__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Description Formula</label>
    <type>Text</type>
</CustomField>